--- a/index.html
+++ b/index.html
@@ -18,6 +18,39 @@
 		<div style="margin-right: 5%" align="right">
 			
 		</div>
+		<div align="right" style="margin-right: 5% ">
+
+			<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;color: white">Login</button>
+
+			<div  id="id01" class="modal">
+				<div style="max-height: 30% ; max-width: 30%">
+			  <form  class="modal-content animate" action="/action_page.php" method="post">
+				<div class="imgcontainer">
+				  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+				  <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Avatar" class="avatar">
+				</div>
+
+				<div class="container">
+				  <label for="uname"><b>Username</b></label>
+				  <input type="text" placeholder="Enter Username" name="uname" required>
+
+				  <label for="psw"><b>Password</b></label>
+				  <input type="password" placeholder="Enter Password" name="psw" required>
+
+				  <button style="color: white" type="submit">Login</button>
+				  <label>
+					<input type="checkbox" checked="checked" name="remember"> Remember me
+				  </label>
+				</div>
+
+				<div class="container" style="background-color:#f1f1f1">
+				  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+				  <span class="psw">Forgot <a href="#">password?</a></span>
+				</div>
+			  </form>
+			</div>
+			</div>
+		</div>
 	</div>
 	`<div class="primarybg_image" >
 	<div style="margin-left: 5% ; margin-right: 5% ">
@@ -53,6 +86,16 @@
 
 	</div>
   </div>
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
 
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
 </body>
 </html>
