--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Views Worth Reading ....</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/Pixabay.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
         <a href="html/Sign_up.html">Signup</a>
         <a href="html/About.html">About</a>
         <a href="html/Feedback.html">Feedback</a>
+      <div></div>
         <div align="right" ; style="margin-right: 5% ">
 
             <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;color: white">Login</button>
@@ -50,6 +52,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="place_searchbox"> 
+            <form>
+                <input type="text" name="search" placeholder="Search..">
+            </form>
     </div>
     `
     <div class="primarybg_image">
@@ -108,14 +115,14 @@
             <th width="51%" align="center">
                   <br><br><br><br>
                   <h1 style="font-family: cosmic sans ; font-size: 300% ">Ayodhya dispute.</h1>
-                  <p align="left">The Ayodhya dispute is a political, historical and socio-religious debate in India, centred on a plot of land in the city of Ayodhya, located in Ayodhya district, Uttar Pradesh. The issues revolve around access to a site traditionally regarded among Hindus to be the birthplace of the Hindu deity Rama,[1] the history and location of the Babri Masjid at the site, and whether a previous Hindu temple was demolished or modified to create the mosque. <a href ="https://en.wikipedia.org/wiki/Ayodhya_dispute" target="_blank">Read more...</a></p>
+                  <p align="left">The Ayodhya dispute is a political, historical and socio-religious debate in India, centred on a plot of land in the city of Ayodhya, located in Ayodhya district, Uttar Pradesh. The issues revolve around access to a site traditionally regarded among Hindus to be the birthplace of the Hindu deity Rama,[1] the history and location of the Babri Masjid at the site, and whether a previous Hindu temple was demolished or modified <a href ="https://en.wikipedia.org/wiki/Ayodhya_dispute" target="_blank">Read more...</a></p>
                   
                 </th>
               </tr>
               <tr>
                 <th width="51%" align="center">
                   <br><br><br><br>
-                  <h1 style="font-family: cosmic sans ; font-size: 300% ">Rafale Deal.</h1>
+                  <h1 style="font-family: cosmic sans ; font-size: 300% ">Panama Papers.</h1>
                   <p align="left">The Panama Papers are 11.5 million leaked documents that detail financial and attorney–client information for more than 214,488 offshore entities.[1][2] The documents, some dating back to the 1970s, were created by, and taken from, Panamanian law firm and corporate service provider Mossack Fonseca,[3] and were leaked in 2015 by an anonymous source 
                     <a href ="https://en.wikipedia.org/wiki/Panama_Papers" target="_blank">Read more...</a></p>
                   </th>
