--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
             </tr>
             <tr>
                 <br><br>
-                  <th width="49%"><img class="border_2px" src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201810/babri-masjid_650c_051914073131_1_0.jpeg?H5_fgc0FUKQDlHDQJaYID9sw1jSvzgBQ" alt="Image_related_to_content" height="80%" width="95%" ></th>
+                  <th width="49%"><img class="border_2px" src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201806/IMG_20160707_142436_1824.jpeg?9kbAVfF3GYtBs6Ct9hezWdzQJ5CMNJLj" alt="Image_related_to_content" height="80%" width="95%" ></th>
             
             <th width="51%" align="center">
-                  <br><br><br><br>
-                  <h1 style="font-family: cosmic sans ; font-size: 300% ">Ayodhya dispute.</h1>
-                  <p align="left">The Ayodhya dispute is a political, historical and socio-religious debate in India, centred on a plot of land in the city of Ayodhya, located in Ayodhya district, Uttar Pradesh. The issues revolve around access to a site traditionally regarded among Hindus to be the birthplace of the Hindu deity Rama,[1] the history and location of the Babri Masjid at the site, and whether a previous Hindu temple was demolished or modified <a href ="https://en.wikipedia.org/wiki/Ayodhya_dispute" target="_blank">Read more...</a></p>
+                  <br>
+                  <h1 style="font-family: cosmic sans ; font-size: 300% ">Freedom 251.</h1>
+                  <p align="left">Ringing Bells founder and CEO Mohit Goel is in news again, and no, the Freedom 251 smartphone, has nothing to do with it. Goel, who once made international headlines by offering the world's cheapest smartphone, has been arrested by the police in an extortion case along with two others. Goel has been accused of allegedly trying to extort money for settling a rape case in Delhi. More details are awaited. <a href ="https://www.indiatoday.in/technology/features/story/maker-of-world-s-cheapest-phone-mohit-goel-arrested-again-but-where-s-freedom-251-1257208-2018-06-11" target="_blank">Read more...</a></p>
                   
                 </th>
               </tr>
