--- a/html/About.html
+++ b/html/About.html
@@ -1,10 +1,42 @@
 <!doctype html>
-<html>
+
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+    <meta charset="utf-8">
+    <title>Views Worth Reading ....</title>
+    <link href="../css/main.css" rel="stylesheet" type="text/css">
+    <link href="../css/Pixabay.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
+    <div class="about_bg_image_">
+
+
+    
+    <div class="topnav" >
+        <a style="padding: .5%" href="../index.html"><img src="../Images/logosmall.png" alt="Home"></a>
+        <a href="../index.html">      Home</a>
+        <a href="Explore.html">Explore</a>
+        <a href="Upload.html">Upload</a>
+        <a href="Sign_up.html">Signup</a>
+        <a class="active" href="About.html">About</a>
+        <a href="Feedback.html">Feedback</a>
+    </div>
+    <div class="white_font" style="margin-left: 10% ;margin-right: 10%" align="center" >
+        <h1 style="font-size: 530% ; color: white">About us </h1>
+        <h5 style="font-size: 130%">Developed in the year 2019 . informatory is one of the leading information providers of India . In India problem with the people is that the more than 50 percent of indian citizens
+             have no idea whats going in country . The motive of our website is to create awareness .
+              In Colabration with alpha Zero this project was started on August 2019 .  </h5>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
