--- a/html/Explore.html
+++ b/html/Explore.html
@@ -1,27 +1,23 @@
 <!doctype html>
-<html>
+
 <head>
-<meta charset="utf-8">
-<title>Views Worth Reading ....</title>
-<link href="css/main.css" rel="stylesheet" type="text/css">
+    <meta charset="utf-8">
+    <title>Views Worth Reading ....</title>
+    <link href="../css/main.css" rel="stylesheet" type="text/css">
+    <link href="../css/Pixabay.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
+
 <body>
-	<div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="html/Explore.html">All Topics</a>
-      <a href="html/Upload.html">Upload</a>
-      <a href="html/Login.html">Login</a>
-      <a href="html/Sign_up.html">Signup</a>
-      <a href="html/About.html">About</a>
-	  <a href="html/Feedback.html">Feedback</a>
-	</div>
-	<br><br>
-	<div style="margin-left: 5%">
-  		<table width="100%" border="0">
-			<h1> </h1>
-		</table>
-	</div>
-	
+    <div class="topnav" >
+        <a style="padding: .5%" href="../index.html"><img src="../Images/logosmall.png" alt="Home"></a>
+        <a href="../index.html">      Home</a>
+        <a class="active" href="Explore.html">Explore</a>
+        <a href="Upload.html">Upload</a>
+        <a href="Sign_up.html">Signup</a>
+        <a href="About.html">About</a>
+        <a href="Feedback.html">Feedback</a>
+    </div>
 </body>
 </html>
-	
