--- a/html/Sign_up.html
+++ b/html/Sign_up.html
@@ -1,10 +1,23 @@
 <!doctype html>
-<html>
+
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+    <meta charset="utf-8">
+    <title>Views Worth Reading ....</title>
+    <link href="../css/main.css" rel="stylesheet" type="text/css">
+    <link href="../css/Pixabay.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
+    <div class="topnav" >
+        <a style="padding: .5%" href="../index.html"><img src="../Images/logosmall.png" alt="Home"></a>
+        <a href="../index.html">      Home</a>
+        <a href="Explore.html">Explore</a>
+        <a href="Upload.html">Upload</a>
+        <a class="active" href="Sign_up.html">Signup</a>
+        <a href="About.html">About</a>
+        <a href="Feedback.html">Feedback</a>
+    </div>
 </body>
 </html>
