--- a/html/About.html
+++ b/html/About.html
@@ -38,5 +38,34 @@
             </tr>
         </table>
     </div>
+    <div class="universal_footer" >
+    <div class="footer_text"style="margin-left:5% ; margin-right : 5%">
+        <table style="color:aqua">
+            <tr>
+                <td>
+                    <h1 style="font-size: 20px">
+                        <ol><h2 style="font-size: 27px">Our Other Services :</h2>
+                            <li style="margin-left: 45%">Article</li>
+                            <li style="margin-left: 45%">Topics</li>
+                            <li style="margin-left: 45%">Videos</li>
+                            <li style="margin-left: 45%">Blogs</li>
+                        </ol> 
+                    </h1>
+                </td>
+                <td align="right">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br><br>
+                    <br>
+                    <h1 style="font-size: 20px" ><b>" This website is under development stage . any suggestion are welcomed <br>. we respect our user and appericiate their effort to make our webstie informative .</b></h1>
+                </td>
+            </tr>
+    </table>
+    </div>
+
+</div>
 </body>
 </html>
