--- a/html/About.html
+++ b/html/About.html
@@ -37,8 +37,13 @@
                 </td>
             </tr>
         </table>
+        
     </div>
-    <div class="universal_footer" >
+    <div style="margin-left: 18%">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p style="font-size : 100px">        Under development !! </p>
+    </div>
+    <div class="universal_footer" style="top : 100%" >
     <div class="footer_text"style="margin-left:5% ; margin-right : 5%">
         <table style="color:aqua">
             <tr>
