--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <br>
 <br>
 <br>
-<div style="max-height: 40% ; width 40%;">
+<div style="max-height: 40% ; width : 40%;">
         <a href="mailto:pranayprajapati101@gmail.com">
                 <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
             </a>
